footer/footer.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800;900&display=swap");

/* FOOTER ATTRIBUTION */
footer #attribution {
    font-size: 0.85rem;
    color: rgba(0, 0, 0, 0.7);
    padding-bottom: rem;
    text-align: center;
}

footer #attribution a {
    color: #000;
    cursor: pointer;
}

/* Other footer stuff */
#footer-mission-header {
    font-size: 24px;
    margin-bottom: 0;
}

.footer-border {
    border-top: 1px solid #000;
    padding-top: 20px;
}

footer .button {
    text-decoration: none !important;
}

footer #terms-copyright-policy a,
footer #navigation a,
footer #terms-copyright-policy a:hover,
footer #navigation a:hover {
    cursor: pointer;
    color: #212529;
}

footer {
    min-height: 200px;
    height: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    position: relative;
    width: 100%;
    font-family: 'Montserrat', sans-serif;
}

#search-outer-div {
    width: 30%;
    min-width: 325px;
}

footer #newsletter-header {
    font-weight: 500;
    font-size: x-large;
}

footer #newsletter form {
    position: relative;
    margin-top: 20px;
    width: 100%;
}

@media (min-width: 500px) and (max-width: 992px) {
    footer #newsletter form {
        width: 75%;
    }
}

footer #newsletter input {
    position: relative;
    width: 100%;
    height: 36px;
    /* background: #FFFFFF; */
    border: 2px solid #33CCCC;
    box-sizing: border-box;
    border-radius: 30px;
    padding: 0 10px;
    cursor: text;
    margin: 0;
}


footer #newsletter form button {
    position: absolute;
    align-items: center;
    right: 8px;
    top: 50%;
    transform: translateY(-50%);
    background: #33CCCC;
    border-radius: 25px;
    outline: none;
    border: none;
    color: #fff;
    height: 24px;
    padding: 0 12px;
    font-weight: 300;
    cursor: pointer;
}


textarea:focus,
input:focus {
    outline: none;
}

footer #newsletter p {
    font-style: italic;
    margin-top: 20px;
    max-width: 55vw;
}

footer .button {
    font-family: 'Open Sans', sans-serif;
    color: white;
    background: #33CCCC;
    border-color: #33CCCC;
    border-radius: 25px;
    padding: 10px;
    width: auto;
    display: inline-block;
}

footer .button:hover {
    color: white;
}

footer .download {
    width: 150px;
    cursor: pointer;

}

footer #terms-copyright-policy {
    font-weight: 500;
    font-size: .85rem;

}

@media only screen and (max-width: 850px) {
    footer {
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    footer #newsletter {
        margin: 0;
    }

    footer #newsletter p {
        max-width: 80vw;
    }

    footer #newsletter p span {
        display: none;
    }

    footer #newsletter p:before {
        content: "Receive monthly emails with amazing opportunities for high school and college students, advice, app updates, mental health news, and more!";
    }

}

#footer-mission h1 {
    padding: 0;
    font-size: 1.75rem;
}

#footer-mission #underline {
    content: '';
    margin-bottom: 0.5rem;
    height: 0.25rem;
    background-color: #33CCCC;
    width: 60px;
}

#newsletter {
    margin-top: 0;
    margin-bottom: 0;
}

